--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @use "./utils/variables" as *;
+@import "./utils/mixins";
 @import "./utils/fixed-class";
 @import "./utils/fixed-style";
 @import "./components/page-header";
@@ -11,3 +12,4 @@
 @import "./components/portfolio-buttons";
 @import "./components/portfolio-main";
 @import "./components/modal-form";
+@import "./components/mobile-menu";
