--- a/sass/components/_lorem-section.scss
+++ b/sass/components/_lorem-section.scss
@@ -1,16 +1,24 @@
 .lorem {
     display: flex;
+    flex-direction: column;
     gap: 30px;
     padding: 0;
-    justify-content: space-between;
+    
 &__icons {
     display: flex;
-    gap: 30px;
     padding: 25px 102.34px;
 &--backgroud {
+  display: block;
     background: $backgroud-white;
     border-radius: 4px;
+
 }
+}
+@include tablet {
+  flex-direction: wrap;
+}
+@include desktop {
+  flex-direction: row;
 }
 }
 .advantages {
