--- a/sass/components/_solutions.scss
+++ b/sass/components/_solutions.scss
@@ -1,14 +1,36 @@
   .solutions {
-    background-image: url(/goit-markup-hw-04/images/img0.jpg);
-    padding-top: 200px;
-    padding-bottom: 200px;
+    background-image: url(/goit-markup-hw-08/images/img0_x1_mobile.jpg);
+    padding-top: 118px;
+    padding-bottom: 118px;
     background-color: $main-background;
     background-position: center;
     background-size: cover;
-    max-width: 1600px;
-    max-height: 600px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0;
+    
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+      background-image: url(/goit-markup-hw-08/images/img0_x2_mobile.jpg);
+    }
+    @include tablet {
+      background-image: url(/goit-markup-hw-08/images/img0_x1_tablet.jpg);
+      @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+      background-image: url(/goit-markup-hw-08/images/img0_x2_tablet.jpg);
+    }
+    }
+@include desktop {
+  padding-top: 200px;
+  padding-bottom: 200px;
+  background-image: url(/goit-markup-hw-08/images/img0_x1_desktop.jpg);
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+      background-image: url(/goit-markup-hw-08/images/img0_x2_desktop.jpg);
+    }
+}
+    
     text-align: center;
     box-shadow: $solutions-box-shadow;
     &__button {
@@ -28,4 +50,5 @@
       cursor: pointer;
     }
     }
+
   }
