--- a/sass/utils/_fixed-class.scss
+++ b/sass/utils/_fixed-class.scss
@@ -3,8 +3,17 @@
     padding-bottom: 94px;
   }
   .container {
-    width: 1200px;
+    max-width: 480px;
+ width: 100%;
     margin: 0 auto;
+    padding: 0 15px;
+    @include tablet {
+      max-width: 768px;
+    }
+    @include desktop {
+      padding: 0;
+      max-width: 1200px;
+    }
   }
   .color-logo {
     color: $main-blue;
