--- a/sass/utils/_fixed-style.scss
+++ b/sass/utils/_fixed-style.scss
@@ -6,15 +6,20 @@ a {
   }
   h1 {
     font-weight: 900;
-    font-size: 44px;
+    font-size: 26px;
+    max-width: 365px;
     line-height: 1.36;
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    width: 696px;
     margin: 0 auto;
     margin-bottom: 30px;
     color: $main-white; 
+    @include desktop {
+      font-size: 44px;
+      max-width: 696px;
+      
+    }
    }
 h3 {
     font-size: 20px;
@@ -23,3 +28,8 @@ h3 {
     letter-spacing: 0.03em;
     margin-bottom: 2px;
    }
+img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
