--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -1,9 +1,14 @@
 .team {
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    align-items: center;
     padding: 0;
-    justify-content: space-between;
+    justify-content: center;
+   gap: 30px;
+    @include tablet {
+      flex-direction: row;
+      flex-wrap: wrap;
+    }
   }
 .heading-team {
     font-size: 36px;
@@ -22,8 +27,6 @@
 
   .image-backgroud {
     background: $main-white;
-    width: 270px;
-    height: 428px;
     left: 215px;
     top: 1635px;
     box-shadow: $modal-box-shadow;
@@ -34,6 +37,7 @@
       line-height: 2;
       text-align: center;
       padding-top: 15px;
+      
     }
     &__position {
       font-size: 16px;
@@ -44,13 +48,12 @@
   .social-icons {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    gap: 10px;
+    justify-content: center;
     margin-left: 32px;
     margin-right: 32px;
-    margin-bottom: 30px;
     padding: 0;
     padding-top: 15px;
+    padding-bottom: 24px;
   &__background {
     width: 44px;
     height: 44px;
