--- a/sass/utils/_fixed-class.scss
+++ b/sass/utils/_fixed-class.scss
@@ -24,7 +24,7 @@
     font-weight: 700;
     line-height: 16px;
     letter-spacing: 0.03em;
-    text-align: left;
+    text-align: center;
     margin-top: 0;
     margin-bottom: 20px;
   }
