--- a/sass/utils/_fixed-style.scss
+++ b/sass/utils/_fixed-style.scss
@@ -33,3 +33,12 @@ img {
   width: 100%;
   height: auto;
 }
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
