--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -5,16 +5,18 @@
     padding: 0;
     justify-content: center;
    gap: 30px;
-    @include tablet {
-      flex-direction: row;
-      flex-wrap: wrap;
-
-    }
-    @include desktop {
-      flex-direction: row;
-      flex-wrap: nowrap;
-    }
+   @include tablet {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+} 
+@include desktop {
+    display: flex;
+    flex-direction: unset;
+    flex-wrap: nowrap;
+}
   }
+ 
 .heading-team {
     font-size: 36px;
     font-weight: 700;
@@ -86,3 +88,4 @@
   .social-icons__background:focus .social-icons__img {
     fill: $main-white;
   }
+ 
