--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -4,8 +4,17 @@
 .footer-columns {
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-}
+  @include tablet {
+    flex-direction: row;
+  flex-wrap: wrap;}
+    @include desktop {
+
+     justify-content: space-between;
+     }
+    }
+
 .footer-logo {
     font-family: "Raleway";
     font-weight: 700;
@@ -14,14 +23,21 @@
     color: $main-white;
     padding-top: 60px;
     text-align: center;
+    @include desktop {
+      text-align: start;
+    }
   }
   .footer-social {
-
     margin-top: 30px;
+  @include desktop {
+    margin-top: 0;
+    margin-bottom: 30px;
   }
+
+   }
     .footer-icon-group {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     gap: 10px;
     padding: 0;
     margin-top: 20px;
@@ -42,15 +58,25 @@
   }
   }
   .footer-newsletter {
-    margin-top: 60px;
+   margin-top: 60px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    @include tablet {
+      width: 100%;
+    }
+    @include desktop {
+      width: auto;
+flex-direction: row;
+   align-items: start;
+   margin-top: 38px;
+   
+  
+    }
     
     &__label {
-    display: block;
-    justify-content: center;
+   
     height: 50px;
     width: 358px;
       border: $border-gray3;
@@ -60,12 +86,17 @@
       padding-left: 16px;
       outline: $outline-gray;
       color: $main-white;
+      @include desktop {
+        margin-right: 12px;
+      }
     }
   }
    .submit-button-2 {
     display: flex;
-    
-    justify-content: space-evenly;
+        justify-content: space-evenly;
+        margin-bottom: 60px;
+   
+   
   &__style {
     position: relative;
     width: 200px;
@@ -85,7 +116,11 @@
     color: $main-white;
     display: flex;
     justify-content: space-evenly;
-    margin-top: 38px;
+    margin-top: 20px;
+    @include desktop {
+      margin-top: 36px
+    }
+ 
   }
   &__icon {
     fill: $main-white;
@@ -95,10 +130,18 @@
     margin: 0 auto;
     padding: 0 0 30px 0;
     text-align: center;
+    @include tablet {
+      padding-bottom: 0;
+    }
+    @include desktop {
+      text-align: start;
+      padding: 0 0 60px 0;
+    }
   &__address {
     line-height: 1.71;
     color: $main-white;
     padding-top: 20px;
+
   }
   &__link {
     line-height: 1.71;
