--- a/sass/utils/_fixed-class.scss
+++ b/sass/utils/_fixed-class.scss
@@ -27,4 +27,8 @@
     text-align: center;
     margin-top: 0;
     margin-bottom: 20px;
+    @include desktop {
+      text-align: start;
+      margin-top: 0;
+    }
   }
