--- a/sass/components/_what-we-do.scss
+++ b/sass/components/_what-we-do.scss
@@ -1,20 +1,13 @@
 .occupation {
+  display: none;
+  @include desktop {
     display: flex;
     gap: 30px;
     padding: 0px;
     margin: 0 auto;
     justify-content: space-between;
-    height: 100%;
-    &__heading {
-        font-size: 36px;
-        font-weight: 700;
-        line-height: 1.17;
-        text-align: center;
-        margin-top: 94px;
-        margin-bottom: 50px;
-        display: none;
-      }
-    &__label {
+    height: 100%;}
+        &__label {
       position: relative;
     &--background {
       position: absolute;
@@ -38,5 +31,19 @@
     &__img {
       height: 100%;
     }
-    display: none;
+
   }
+  .occupation-header {
+         display: none;
+      @include desktop {
+        display: flex;
+        justify-content: center;
+        font-size: 36px;
+        font-weight: 700;
+        line-height: 1.17;
+        text-align: center;
+        margin-top: 94px;
+        margin-bottom: 50px;
+      }
+    }
+
