--- a/sass/components/_our-clients.scss
+++ b/sass/components/_our-clients.scss
@@ -36,6 +36,7 @@
     border-radius: 4px;
     @include tablet {
       width: 226px;
+      justify-content: space-around;
     }
     @include desktop {
       width: 170px;
