--- a/sass/utils/_fixed-class.scss
+++ b/sass/utils/_fixed-class.scss
@@ -6,7 +6,7 @@
     max-width: 480px;
  width: 100%;
     margin: 0 auto;
-    padding: 0;
+    padding: 0 15px;
     @include tablet {
       max-width: 768px;
     }
